@@ -60,6 +60,7 @@ Russell Yanofsky <russell@yanofsky.org>
 fukazawa (http://code.google.com/u/fukazawa/)
 Glenn Washburn <crass@berlios.de>
 Daniel Gerber <daniel.g.gerber@gmail.com>
+A. Motolla (http://code.google.com/u/a.motolla/)
 
 
 
