@@ -60,6 +60,7 @@ Copyright: 2010 Russell Yanofsky <russell@yanofsky.org>
 Copyright: 2010 fukazawa (http://code.google.com/u/fukazawa/)
 Copyright: 2010 Glenn Washburn <crass@berlios.de>
 Copyright: 2010 Daniel Gerber <daniel.g.gerber@gmail.com>
+Copyright: 2010 A. Motolla (http://code.google.com/u/a.motolla/)
 
 Files: examples/flowpanel/*
 Copyright: 2009 jordonwii (http://code.google.com/u/jordonwii)
