@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.6
                     ---------------------------------
 
+ * Added datetime module, thanks to A. Motolla.
+
  * Added issubclass, thanks to Daniel Gerber
 
  * Off-by-one bug in datetime on months, fixed by Russell Yanofsky
